# whisper-os

./: .gitignore  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/permissions/: app.toml
src-tauri/src/: main.rs
