[package]
name = "whisper-os"
version = "0.1.0"
description = "Whisper OS — an ambient, local-first focus companion"
authors = ["Anil K"]
edition = "2021"

# this tells Cargo to build for Tauri desktop
default-run = "whisper-os"

[dependencies]
# core Tauri runtime
tauri = { version = "2", features = ["wry", "tray-icon"] }
tauri-build = { version = "2" }

# official Tauri plugins
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

# general dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
device_query = "4.0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3

